--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,9 @@ jobs:
       with:
         python-version: '3.12'
 
+    - name: Install build dependencies
+      run: pip install setuptools
+
     - name: Build sdist
       run: python setup.py sdist
 
